Update DB데이터 읽기 및 쓰기.ipynb
내용수정

--- a/DB파이썬/DB데이터 읽기 및 쓰기.ipynb
+++ b/DB파이썬/DB데이터 읽기 및 쓰기.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "67d6d241-d9dd-406b-9657-c72f9a9195ca",
+   "metadata": {},
+   "source": [
+    "# 사전 설치가 필요한 것들"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b632f9db-368c-4543-917b-0bcadbe181c4",
@@ -29,14 +37,6 @@
    "source": [
     "!pip install pymysql"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d8241592-d9b1-4c33-b22e-5f239f9746be",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -114,6 +114,22 @@
     "except Exception as e:\n",
     "    print(e)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1717fff5-1d35-411c-afcb-1e115408674d",
+   "metadata": {},
+   "source": [
+    "## 에디터에서 데이터를 불러와 변경한 판다스 데이터프레임의 데이터를 가지고 sql서버에 저장이 가능"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57db7885-f063-4b5a-b812-28f661cc3bd0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
