Update DB데이터 읽기 및 쓰기.ipynb
No module named 'MySQLdb' 해결법
!pip install mysqlclient 추가

--- a/DB파이썬/DB데이터 읽기 및 쓰기.ipynb
+++ b/DB파이썬/DB데이터 읽기 및 쓰기.ipynb
@@ -39,6 +39,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd4c73b4-d31e-4cc1-a332-24e70688a247",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!!pip install mysqlclient"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a7acf3fd-9378-44c1-aa59-451e3e9b8613",
    "metadata": {},
